Refactor balance calculation and enhance user management features
- Updated BalanceDto and DebtDto to use @Getter and @Setter annotations for better encapsulation.
- Modified BalanceService and BalanceServiceImpl to include payments in the balance calculation.
- Enhanced DataLoader to correctly set fromUser and toUser for Payment entities.
- Added new user management endpoints in UserController for retrieving, updating, and deleting users.
- Improved unit tests for balance calculation and user management functionalities.